--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
-    <title>{{ page.title }}</title>
+    <title>Page</title>
     <link rel="icon" href="/images/reinteract.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="/images/reinteract.ico" type="image/x-icon" />
     <link rel="stylesheet" href="/css/reinteract.css" type="text/css"/>
@@ -24,6 +24,6 @@
       </div>
       <div class="clear"></div>
     </div>
-    <h1>Page not found</h1>
+    <h2>Page not found</h2>
   </body>
 </html>
