--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
-    <title>Page</title>
+    <title>Page not found - Reinteract</title>
     <link rel="icon" href="/images/reinteract.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="/images/reinteract.ico" type="image/x-icon" />
     <link rel="stylesheet" href="/css/reinteract.css" type="text/css"/>
